Pushing to github

--- a/index.html
+++ b/index.html
@@ -17,11 +17,33 @@
     <!-- header -->
     <header>
       <div class="header-left">
-        <a href="https://www.facebook.com/rayyan.naveed.33?mibextid=ZbWKwL" target="_blank"> <img src="svgs/social/fb.svg" alt="" /></a>
-        <a href="https://www.linkedin.com/in/muhammad-rayyan-naveed-63090b329/" target="_blank"> <img src="svgs/social/insta.svg" alt="" /></a>
-        <a href="https://www.linkedin.com/in/muhammad-rayyan-naveed-63090b329/" target="_blank"> <img src="svgs/social/linkedin.svg" alt="" /></a>
-        <a href="https://github.com/dashboard" target="_blank"> <img src="svgs/social/github.svg" alt="" /></a>
-        <a href="https://vercel.com/muhammad-rayyan-naveeds-projects" target="_blank"> <img src="svgs/social/vercel.svg" alt="" /></a>
+        <a
+          href="https://www.facebook.com/rayyan.naveed.33?mibextid=ZbWKwL"
+          target="_blank"
+        >
+          <img src="svgs/social/fb.svg" alt="fb"
+        /></a>
+        <a
+          href="https://www.linkedin.com/in/muhammad-rayyan-naveed-63090b329/"
+          target="_blank"
+        >
+          <img src="svgs/social/insta.svg" alt="insta"
+        /></a>
+        <a
+          href="https://www.linkedin.com/in/muhammad-rayyan-naveed-63090b329/"
+          target="_blank"
+        >
+          <img src="svgs/social/linkedin.svg" alt="linkedin"
+        /></a>
+        <a href="https://github.com/dashboard" target="_blank">
+          <img src="svgs/social/github.svg" alt="github"
+        /></a>
+        <a
+          href="https://vercel.com/muhammad-rayyan-naveeds-projects"
+          target="_blank"
+        >
+          <img src="svgs/social/vercel.svg" alt="vercel"
+        /></a>
       </div>
       <div class="header-right">
         <span>
@@ -65,7 +87,7 @@
         <div class="menu-icon">
           <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
         </div>
-      </div> 
+      </div>
     </nav>
 
     <!-- img-section -->
@@ -90,7 +112,7 @@
       </div>
       <div class="advantage-bottom">
         <div class="column">
-          <img src="svgs/bulb.svg" alt="" />
+          <img src="svgs/advantages/bulb.svg" alt="innovation"/>
           <div class="heading-2">INNOVATION</div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
@@ -98,7 +120,7 @@
           </p>
         </div>
         <div class="column">
-          <img src="svgs/thumb.svg" alt="" />
+          <img src="svgs/advantages/thumb.svg" alt="quality" />
           <div class="heading-2">QUALITY</div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
@@ -106,7 +128,7 @@
           </p>
         </div>
         <div class="column">
-          <img src="svgs/clock.svg" alt="" />
+          <img src="svgs/advantages/clock.svg" alt="experirnece" />
           <div class="heading-2">EXPERIENCE</div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
@@ -114,7 +136,7 @@
           </p>
         </div>
         <div class="column">
-          <img src="svgs/clients.svg" alt="" />
+          <img src="svgs/advantages/clients.svg" alt="clients" />
           <div class="heading-2">HAPPY CLIENTS</div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
@@ -122,7 +144,7 @@
           </p>
         </div>
         <div class="column">
-          <img src="svgs/support.svg" alt="" />
+          <img src="svgs/advantages/support.svg" alt="support" />
           <div class="heading-2">SUPPORT</div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
@@ -136,7 +158,7 @@
     <section class="about-section">
       <div class="heading-1"><span class="black">ABOUT</span> US</div>
       <div class="grid">
-        <div class="grid-top"> 
+        <div class="grid-top">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Dignissimos, quisquam sed! Officiis ad quia laborum dolorum
@@ -177,7 +199,7 @@
       </div>
       <div class="services-bottom">
         <div class="column">
-          <img src="svgs/star.svg" alt="" />
+          <img src="svgs/star.svg" alt="star" />
           <div class="heading-2">WEB DESIGN</div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
@@ -186,7 +208,7 @@
           <a class="green-read-more" href="#readmore">read more</a>
         </div>
         <div class="column">
-          <img src="svgs/star.svg" alt="" />
+          <img src="svgs/star.svg" alt="star" />
           <div class="heading-2">WEB DESIGN</div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
@@ -195,7 +217,7 @@
           <a class="green-read-more" href="#readmore">read more</a>
         </div>
         <div class="column">
-          <img src="svgs/star.svg" alt="" />
+          <img src="svgs/star.svg" alt="star" />
           <div class="heading-2">WEB DESIGN</div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
@@ -204,7 +226,7 @@
           <a class="green-read-more" href="#readmore">read more</a>
         </div>
         <div class="column">
-          <img src="svgs/star.svg" alt="" />
+          <img src="svgs/star.svg" alt="star" />
           <div class="heading-2">WEB DESIGN</div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
@@ -213,7 +235,7 @@
           <a class="green-read-more" href="#readmore">read more</a>
         </div>
         <div class="column">
-          <img src="svgs/star.svg" alt="" />
+          <img src="svgs/star.svg" alt="star" />
           <div class="heading-2">WEB DESIGN</div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
@@ -245,7 +267,7 @@
             <li><a href="#advertisement">ADVERTISEMENT</a></li>
           </ul>
         </nav>
-        <img src="images/8.jpg" alt="" />
+        <img src="images/8.jpg" alt="brands" />
       </div>
     </section>
     <hr />
@@ -263,7 +285,7 @@
         <div class="column">
           <fieldset class="circle">
             <legend>1</legend>
-            <img src="svgs/process/phone.svg" alt="" />
+            <img src="svgs/process/phone.svg" alt="phone" />
           </fieldset>
           <div class="heading-2">REQUEST CALL</div>
           <p>
@@ -274,7 +296,7 @@
         <div class="column">
           <fieldset class="circle">
             <legend>2</legend>
-            <img src="svgs/process/msg.svg" alt="" />
+            <img src="svgs/process/msg.svg" alt="message" />
           </fieldset>
           <div class="heading-2">COMMUNICATION</div>
           <p>
@@ -285,7 +307,7 @@
         <div class="column">
           <fieldset class="circle">
             <legend>3</legend>
-            <img src="svgs/process/plan.svg" alt="" />
+            <img src="svgs/process/plan.svg" alt="planning" />
           </fieldset>
           <div class="heading-2">PLANNING</div>
           <p>
@@ -296,7 +318,7 @@
         <div class="column">
           <fieldset class="circle">
             <legend>4</legend>
-            <img src="svgs/process/setting.svg" alt="" />
+            <img src="svgs/process/setting.svg" alt="process" />
           </fieldset>
           <div class="heading-2">WORK PROCESS</div>
           <p>
@@ -307,7 +329,7 @@
         <div class="column">
           <fieldset class="circle">
             <legend>5</legend>
-            <img src="svgs/process/correct.svg" alt="" />
+            <img src="svgs/process/correct.svg" alt="correction" />
           </fieldset>
           <div class="heading-2">CORRECTING</div>
           <p>
@@ -318,7 +340,7 @@
         <div class="column">
           <fieldset class="circle">
             <legend>6</legend>
-            <img src="svgs/process/dilmer.svg" alt="" />
+            <img src="svgs/process/dilmer.svg" alt="dilmer" />
           </fieldset>
           <div class="heading-2">DILMER</div>
           <p>
@@ -341,7 +363,7 @@
       </div>
       <div class="reviews-bottom">
         <div class="column">
-          <img src="svgs/reviews/client.svg" alt="" />
+          <img src="svgs/reviews/client.svg" alt="client" />
           <div class="client-info">
             <h3>JOHN DOE</h3>
             <p>
@@ -352,7 +374,7 @@
           </div>
         </div>
         <div class="column">
-          <img src="svgs/reviews/client.svg" alt="" />
+          <img src="svgs/reviews/client.svg" alt="client" />
           <div class="client-info">
             <h3>JOHN DOE</h3>
             <p>
@@ -363,7 +385,7 @@
           </div>
         </div>
         <div class="column">
-          <img src="svgs/reviews/client.svg" alt="" />
+          <img src="svgs/reviews/client.svg" alt="client" />
           <div class="client-info">
             <h3>JOHN DOE</h3>
             <p>
@@ -374,7 +396,7 @@
           </div>
         </div>
         <div class="column">
-          <img src="svgs/reviews/client.svg" alt="" />
+          <img src="svgs/reviews/client.svg" alt="client" />
           <div class="client-info">
             <h3>JOHN DOE</h3>
             <p>
@@ -398,7 +420,7 @@
         </p>
       </div>
       <div class="skills-bottom">
-        <img src="images/infograph.jpg" alt="" />
+        <img src="images/infograph.jpg" alt="infograph" />
       </div>
     </section>
     <hr />
@@ -430,7 +452,7 @@
       </div>
       <div class="contact-bottom">
         <div class="row row-1">
-          <img src="svgs/location.svg" alt="" />
+          <!-- <img src="svgs/location.svg" alt="location" /> -->
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Repellendus, mollitia.
@@ -456,13 +478,13 @@
             info@website.com
           </span>
         </div>
-        <img class="map" src="images/map.jpg" alt="" />
+        <img class="map" src="images/map.jpg" alt="map" />
       </div>
     </section>
     <!-- footer -->
     <footer>
       <div class="column">
-        <img src="logo/panacloud.png" alt="" />
+        <img src="logo/panacloud.png" alt="panacloud" />
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet laborum
           quas enim magnam repellendus voluptatibus voluptatem culpa itaque
@@ -497,49 +519,80 @@
       <div class="column">
         <h3>CONTACTS</h3>
         <ul class="contact-ul">
-          <li><span>
-            <i
-              class="fa-solid fa-square-phone-flip fa-xl"
-              style="color: #eef3f2"
-            ></i>
-            +92 312 888 1234
-            <!-- <span>+92 312 888 1234</span> -->
-          </span></li>
-          <li><span>
-            <i
-              class="fa-solid fa-square-phone-flip fa-xl"
-              style="color: #eef3f2"
-            ></i>
-            +92 312 888 1234
-            <!-- <span>+92 312 888 1234</span> -->
-          </span></li>
-          <li><span>
-            <i class="fa-regular fa-envelope fa-xl" style="color: #eef3f2"></i>
-            info@website.com
-          </span></li>
+          <li>
+            <span>
+              <i
+                class="fa-solid fa-square-phone-flip fa-xl"
+                style="color: #eef3f2"
+              ></i>
+              +92 312 888 1234
+              <!-- <span>+92 312 888 1234</span> -->
+            </span>
+          </li>
+          <li>
+            <span>
+              <i
+                class="fa-solid fa-square-phone-flip fa-xl"
+                style="color: #eef3f2"
+              ></i>
+              +92 312 888 1234
+              <!-- <span>+92 312 888 1234</span> -->
+            </span>
+          </li>
+          <li>
+            <span>
+              <i
+                class="fa-regular fa-envelope fa-xl"
+                style="color: #eef3f2"
+              ></i>
+              info@website.com
+            </span>
+          </li>
         </ul>
         <h3>FOLLOW US</h3>
         <div class="follow-bottom">
-          <a href="https://www.facebook.com/rayyan.naveed.33?mibextid=ZbWKwL" target="_blank"> <img src="svgs/social/fb.svg" alt="" /></a>
-          <a href="https://www.linkedin.com/in/muhammad-rayyan-naveed-63090b329/" target="_blank"> <img src="svgs/social/insta.svg" alt="" /></a>
-          <a href="https://www.linkedin.com/in/muhammad-rayyan-naveed-63090b329/" target="_blank"> <img src="svgs/social/linkedin.svg" alt="" /></a>
-          <a href="https://github.com/dashboard" target="_blank"> <img src="svgs/social/github.svg" alt="" /></a>
-          <a href="https://vercel.com/muhammad-rayyan-naveeds-projects" target="_blank"> <img src="svgs/social/vercel.svg" alt="" /></a>
+          <a
+            href="https://www.facebook.com/rayyan.naveed.33?mibextid=ZbWKwL"
+            target="_blank"
+          >
+            <img src="svgs/social/fb.svg" alt="fb"
+          /></a>
+          <a
+            href="https://www.linkedin.com/in/muhammad-rayyan-naveed-63090b329/"
+            target="_blank"
+          >
+            <img src="svgs/social/insta.svg" alt="insta"
+          /></a>
+          <a
+            href="https://www.linkedin.com/in/muhammad-rayyan-naveed-63090b329/"
+            target="_blank"
+          >
+            <img src="svgs/social/linkedin.svg" alt="linkedin"
+          /></a>
+          <a href="https://github.com/dashboard" target="_blank">
+            <img src="svgs/social/github.svg" alt="github"
+          /></a>
+          <a
+            href="https://vercel.com/muhammad-rayyan-naveeds-projects"
+            target="_blank"
+          >
+            <img src="svgs/social/vercel.svg" alt="vercel"
+          /></a>
         </div>
       </div>
     </footer>
 
     <script>
-      let menuList = document.getElementById("menuList")
-      menuList.style.maxHeight = "0px"
+      let menuList = document.getElementById("menuList");
+      menuList.style.maxHeight = "0px";
 
-      function toggleMenu(){
-          if(menuList.style.maxHeight == "0px"){
-              menuList.style.maxHeight = "550px"
-          } else{
-              menuList.style.maxHeight = "0px"
-          }
+      function toggleMenu() {
+        if (menuList.style.maxHeight == "0px") {
+          menuList.style.maxHeight = "550px";
+        } else {
+          menuList.style.maxHeight = "0px";
+        }
       }
-  </script>
+    </script>
   </body>
 </html>
